# gconv

./: .gitignore  LICENSE  README.md  gconv_tutorial.ipynb  main.py  pyproject.toml  test_kernel.py
gconv/: __init__.py
gconv/geometry/: __init__.py  repulsion.py  so3.py
gconv/geometry/groups/: __init__.py  _grid_cache.py  o2.py  o3.py  s2.py  so2.py  so3.py
gconv/gnn/functional/: __init__.py  grid.py
gconv/gnn/kernels/: __init__.py  kernel.py
gconv/gnn/modules/: __init__.py  gconv.py
gconv/nn/: __init__.py
gconv/nn/functional/: __init__.py  grid.py  mask.py
gconv/nn/kernels/: __init__.py  kernel.py  kernel_e3.py  kernel_se2.py  kernel_se3.py  old_kernel.py
gconv/nn/modules/: __init__.py  gconv.py  gconv_e3.py  gconv_se2.py  gconv_se3.py  normalization.py  pooling.py
gconv/tests/: test_equivariance.py  test_gconv.py  test_gconv_e2.py  test_gconv_e3.py  test_gconv_se2.py  test_gconv_se3.py  test_group_so2.py  test_kernel.py  test_kernel_e2.py  test_kernel_e3.py  test_kernel_se2.py  test_kernel_se3.py
gconv3d/: s3_signal_plot.py
gconv3d/geometry/: __init__.py  interpolation.py
gconv3d/geometry/groups/: __init__.py  o3.py  s2.py  so3.py
gconv3d/nn/: __init__.py
gconv3d/nn/functional/: __init__.py  _grid_cache.py  grid.py  mask.py
gconv3d/nn/kernels/: __init__.py  kernel.py  kernel_e3.py  kernel_o3.py  kernel_se3.py  kernel_so3.py
gconv3d/nn/modules/: __init__.py  activations.py  gconv.py  gconv_e3.py  gconv_se3.py  gconv_so3.py  pooling.py  (+1 more)
test/: test_gconv.py  test_kernel.py
tests/: test_gconv.py  test_kernel.py  test_o2.py  test_o3.py
(+23 files in other folders)
